--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         About Us
                     </a>
                 </li><li class="nav-item">
-                    <a class="nav-link link text-warning display-4" href="#">
+                    <a class="nav-link link text-warning display-4" href="index.html#features18-9">
                         Projects</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-4" href="#_givealways">
@@ -79,7 +79,7 @@
         <h1 class="mbr-section-title align-center pb-3 mbr-bold mbr-fonts-style display-1">freely receive. freely give.</h1>
 
         <h3 class="mbr-section-subtitle mbr-fonts-style display-2">Select play above to learn more<br></h3>
-        <h3 class="mbr-section-subtitle mbr-fonts-style display-5">“One person gives freely, yet gains even more; another holds unduly, but comes to poverty. <br>A generous person will prosper; whoever refreshes others will be refreshed.” —Proverbs 11 24-25</h3>
+        <h3 class="mbr-section-subtitle mbr-fonts-style display-5">“One person gives freely, yet gains even more; another holds unduly, but comes to poverty. <br>A generous person will prosper; whoever refreshes others will be refreshed.” <br>—Proverbs 11:24-25</h3>
 
         <div class="container mt-5 pt-5 pb-5">
         </div>
@@ -172,7 +172,7 @@
                         <h4 class="card-title mbr-fonts-style display-7">
                             Small Business Tailor Shops</h4>
                         <p class="mbr-text mbr-fonts-style align-left display-7">
-                            Women in the community receive supplies and instruction from By Grace Charity to start their own seamstress shops. This enables them to provide school uniforms and other clothing at a reduced cost to families with limited resources. These industrious women also seek out others in their community to create new businesses.
+                            Women in the community receive supplies and instruction from By Grace Charity to start their own seamstress shops. This enables them to provide school uniforms and other clothing at a reduced cost to families with limited resources. These industrious women also seek out others in their community to create new businesses.<br>
                         </p>
                     </div>
                 </div>
@@ -188,7 +188,7 @@
                         <h4 class="card-title mbr-fonts-style display-7">
                             Small Business Poultry Farming</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                           Qualifying families receive poultry, feed and wire mesh enclosures. These families, live in close proximity and have daily or weekly contact allowing them to form a village Co-Op to market the eggs and purchase supplies in bulk. They agree in advance to donate surplus chicks or layers to another qualifying family in need. The new families agree to do the same.
+                           Qualifying families receive poultry, feed and wire mesh enclosures. These families, live in close proximity and have daily or weekly contact allowing them to form a village Co-Op to market the eggs and purchase supplies in bulk. They agree in advance to donate surplus chicks or layers to another qualifying family in need. The new families agree to do the same.<br>
                         </p>
                     </div>
                 </div>
@@ -205,7 +205,7 @@
                         <h4 class="card-title mbr-fonts-style display-7">
                             Small Business Fish Farming</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Fish farming allows impoverished families to become self reliant in a very short period of time. Families are given basic supplies such as plastic liners, feed, and fish fry to raise tilapia on their own land. They market the fish to provide much needed resource for their families, and assist new families in starting their own fish farms.
+                            Fish farming allows impoverished families to become self reliant in a very short period of time. Families are given basic supplies such as plastic liners, feed, and fish fry to raise tilapia on their own land. They market the fish to provide much needed resource for their families, and assist new families in starting their own fish farms.<br>
                         </p>
                     </div>
                 </div>
