create github pages

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h1 class="mbr-section-title align-center pb-3 mbr-bold mbr-fonts-style display-1">freely receive. freely give.</h1>
 
         <h3 class="mbr-section-subtitle mbr-fonts-style display-2">Select play above to learn more<br></h3>
-        <h3 class="mbr-section-subtitle mbr-fonts-style display-5">“One person gives freely, yet gains even more; another holds unduly, but comes to poverty. <br>A generous person will prosper; whoever refreshes others will be refreshed.” <br>—Proverbs 11:24-25</h3>
+        <h3 class="mbr-section-subtitle mbr-fonts-style display-5">“One person gives freely, yet gains even more; another holds unduly, but comes to poverty. &nbsp;A generous person will prosper; whoever refreshes others will be refreshed.” <br>—Proverbs 11:24-25</h3>
 
         <div class="container mt-5 pt-5 pb-5">
         </div>
