create github pages

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <div class="card-wrapper ">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="#" class="btn btn-primary display-4">DONATE</a></div>
+                        <div class="mbr-section-btn text-center"><a href="#_givealways" class="btn btn-primary display-4">DONATE</a></div>
                         <img src="assets/images/img-461-628x471.jpg" alt="" title="">
                     </div>
                     <div class="card-box">
@@ -181,7 +181,7 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="#" class="btn btn-primary display-4">DONATE</a></div>
+                        <div class="mbr-section-btn text-center"><a href="#_givealways" class="btn btn-primary display-4">DONATE</a></div>
                         <img src="assets/images/img-497-676x507.jpeg" alt="" title="">
                     </div>
                     <div class="card-box">
@@ -198,7 +198,7 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="#" class="btn btn-primary display-4">DONATE</a></div>
+                        <div class="mbr-section-btn text-center"><a href="#_givealways" class="btn btn-primary display-4">DONATE</a></div>
                         <img src="assets/images/img-20171031-wa0012-1024x576.jpeg" alt="" title="">
                     </div>
                     <div class="card-box">
