--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.css">
+  <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.theme.css">
+  <link rel="stylesheet" href="assets/datepicker/jquery.datetimepicker.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -90,7 +93,7 @@
             <div class="modalWindow-container">
                 <div class="modalWindow-video-container">
                     <div class="modalWindow-video">
-                        <iframe width="100%" height="100%" frameborder="0" allowfullscreen="1" data-src="http://www.youtube.com/watch?v=uNCr7NdOJgw"></iframe>
+                        <iframe width="100%" height="100%" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" data-src="https://www.youtube.com/embed/u2PZ0vhWKxQ?controls=0"></iframe>
                     </div>
                     <a class="close" role="button" data-dismiss="modal">
                         <span aria-hidden="true" class="mbri-close mbr-iconfont closeModal"></span>
@@ -253,21 +256,22 @@
                     Get monthly updates and free resources.
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
-                    <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="CTb5J/yLq9bmoQz+qoXdZyH1QXNzhDmuXljuwSlViDHcpUvR0lYMHCao7gVtclom2Svhj+Nu4hHWd+bL4STXQmYnBvsEYlIuuaqjWhUTBEzCs4Xetn7Rn7msDLvXW+il">
-                        <div class="row form-inline justify-content-center">
-                            <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
-                            <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
-                                                    </div>
-                        </div>
-                        <div class="dragArea row form-inline justify-content-center">
-                            <div class="col-auto  form-group " data-for="email">
-                                <input type="email" name="email" placeholder="Email" data-form-field="Email" required="required" class="form-control input-sm input-inverse my-2 display-7" id="email-footer4-c">
-                            </div>
-                            <div class="col-auto  input-group-btn  m-2"><button type="submit" class="btn m-0 btn-secondary display-4">Subscribe</button></div>
-                        </div>
-                    </form><!---Formbuilder Form--->
-                </div>
+<!--Formbuilder Form-->
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="gPwPCA8gzW0OO6nxLaG0iQnc7+aqhChwGsQBQViGQRW1jI48v89kZCnNg74bGx3SLmIVCd0uFxH7gTcrsZz4NqBX0/DsQKW1RAuOktKSSmecrqFRLojLajoQmtHMOKCk">
+<div class="row">
+<div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
+<div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
+</div>
+<div class="dragArea row">
+<div class="col-auto form-group " data-for="email">
+<input type="email" name="email" placeholder="Email" data-form-field="Email" required="required" class="form-control input-sm input-inverse my-2 display-7" value="" id="email-footer4-c">
+</div>
+<div class="col-auto input-group-btn m-2">
+<button type="submit" class="btn m-0 btn-secondary display-4">Subscribe</button>
+</div>
+</div>
+</form><!--Formbuilder Form-->
+</div>
                 <p class="mb-4 mbr-fonts-style foot-title display-7">
                     CONNECT WITH US
                 </p>
@@ -327,6 +331,9 @@
   <script src="assets/playervimeo/vimeo_player.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/mbr-popup-btns/mbr-popup-btns.js"></script>
+  <script src="assets/formstyler/jquery.formstyler.js"></script>
+  <script src="assets/formstyler/jquery.formstyler.min.js"></script>
+  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
