create github pages

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="Z9XopoP0QLGZju1l8OgxxzIRestcqSqrrKciStUu5LfsdBqyey8zn7K64uEqsdt3lOIhRBTtkCWV/aBk7cGYgGQMYjTmAHA40bCQ2G6HXTUFmb+bD58yYXku88zU9dPH">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="TO9zjSPx8qibIPkbqW3nhfMNyaZmYIeqlQ213rZmM0aPue80Qw/i5wWliG8JjnLMYtJJRl/AMAV1Zdz9fzrKyikXS8BbZrKaV3j8yt3rupde5AoFQDecf4OTJuMDtQul">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for subscribing!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
@@ -297,18 +297,18 @@
                 </p>
                 <div class="social-list pl-0 mb-0">
                         <div class="soc-item">
-                            <a href="https://twitter.com/mobirise" target="_blank">
-                                <span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
+                            <a href="#" target="_blank">
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span>
                             </a>
                         </div>
                         <div class="soc-item">
                             <a href="#" target="_blank">
-                                <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon"></span>
                             </a>
                         </div>
                         <div class="soc-item">
                             <a href="#" target="_blank">
-                                <span class="socicon-youtube socicon mbr-iconfont mbr-iconfont-social"></span>
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-youtube socicon"></span>
                             </a>
                         </div>
                         <div class="soc-item">
