--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-warning display-4" href="index.html#features11-7">
+                    <a class="nav-link link text-warning display-4" href="index.html#header7-e">
                         About Us
                     </a>
                 </li><li class="nav-item">
@@ -277,7 +277,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="TO9zjSPx8qibIPkbqW3nhfMNyaZmYIeqlQ213rZmM0aPue80Qw/i5wWliG8JjnLMYtJJRl/AMAV1Zdz9fzrKyikXS8BbZrKaV3j8yt3rupde5AoFQDecf4OTJuMDtQul">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="2WQ6Hn+4UCnF8qCiUpZbx2nineR5zMfrEzNS1XWhlOW5vOU90u82BrSXX8nJRKixzRz1HZRBbcxk7jrr54ce1y05tAQeAO3Lz4PSR1RTkMRpvkOU2yfs4EHS76Bpgr3D">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for subscribing!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
