create github pages

--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
                     <a class="nav-link link text-warning display-4" href="index.html#features18-9">
                         Projects</a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-4" href="#_givealways">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-7" href="#_givealways">
                     
-                    DONATE</a></div>
+                    DONATE</a> <a class="btn btn-sm btn-secondary display-7" href="tel:+13057819747">
+                    
+                    +1 (305) 781-9747</a></div>
         </div>
     </nav>
 </section>
@@ -277,7 +279,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="2WQ6Hn+4UCnF8qCiUpZbx2nineR5zMfrEzNS1XWhlOW5vOU90u82BrSXX8nJRKixzRz1HZRBbcxk7jrr54ce1y05tAQeAO3Lz4PSR1RTkMRpvkOU2yfs4EHS76Bpgr3D">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="oXD2eQBCPmiMF6GFuIHMBZ0oVhIpj8LWwe6ANASsTlwS052UhKtodGFI3rmflFwGG6ZQMLOsuid4dpnoj1OcFNkf9QXZrcXpxhvWEUx/LSpliq6vdnWa1edmw7exys2c">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for subscribing!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
