--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 </div>
                 <p class="mb-3 mbr-fonts-style foot-title display-7">
                     By Grace Charity<br>1214 Cortez&nbsp;<br>Coral Gables, FL 33134-2703<br>Call Us: <a href="tel:+13057819747" class="text-white">+1 (305) 781-9747</a></p>
-                <p class="mbr-text mbr-fonts-style mbr-links-column display-7"><a href="https://apps.irs.gov/app/eos/displayAll.do?dispatchMethod=displayAllInfo&Id=15590454&ein=813502893&country=US&deductibility=all&dispatchMethod=searchAll&isDescending=false&city=&ein1=81-3502893&postDateFrom=&exemptTypeCode=al&submitName=Search&sortColumn=orgName&totalResults=1&names=&resultsPerPage=25&indexOfFirstRow=0&postDateTo=&state=All+States" target="_blank" class="text-white">501(c)3 Information</a></p>
+                <p class="mbr-text mbr-fonts-style mbr-links-column display-7"><a href="https://apps.irs.gov/pub/epostcard/dl/FinalLetter_81-3502893_BYGRACECHARITYINC_09172018_01.tif" target="_blank" class="text-white">501(c)3 Information</a></p>
             </div>
             <div class="col-md-4 col-sm-8">
                 <p class="mb-4 foot-title mbr-fonts-style display-7">
@@ -279,7 +279,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="fSuAA5ULXbGmiGzaZk9LRGDVb2lCiZpUlbXYKAw7VETQpf+ZY0P6amZ0e+GkKCye/1Ne4A8BP93p0J++StuEfuT+gNTm8M8HIerlYZCGuTTZQnKMg0dQz9LoYXUp0F73">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="K6KtohvSdN5hSoPN1JKVFIBtajbYrY4H2zlOWwHO10TYWX15NRRbsOwEg7OiJZDfQI7B63bsS2qk7tAp7Zy4nO5t3RjKpYjuoA3C0eNkd11rMl3QBTROo88HvTW0cXju">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for subscribing!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
