--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="header13 cid-rwCk7XV98k mbr-fullscreen mbr-parallax-background" id="header13-3">
+<section class="header13 cid-rwCk7XV98k mbr-fullscreen" id="header13-3" data-bg-video="https://www.youtube.com/watch?v=6E69yIRggRI">
 
     
 
@@ -233,8 +233,7 @@
             <div class="media-content align-right">
                 <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1">Our Story</h1>
                 <div class="mbr-section-text mbr-white pb-3">
-                    <p class="mbr-text mbr-fonts-style display-5">
-                        Learn the story of how By Grace Charity got started</p>
+                    <p class="mbr-text mbr-fonts-style display-5">Watch this video to learn the story of how By Grace Charity got started and it's impact.</p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="assets/files/4.%20By%20Grace%20Charity%20brochure.pdf" target="_blank">BROCHURE</a>
                         <a class="btn btn-md btn-white-outline display-4" href="#_givealways">DONATE</a></div>
@@ -279,7 +278,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="0a4VZ8cuOm47bSEmGvsqswQE9oM2kpGRnQjZDYyBZZxTDnitJItn7ndsYC0ob2gjGPDh4L7AW5coNEXzTKd/mcfRjakCnjtz8m3+yrsqlkxasOAQJQjZ3cSRAmfFAgZQ">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="hIpT3bWYZ7w8xQLkez2FoNlCz0kWE+ZN4+jCP7zplxM6q88v/DYE+nv0G0RfbkqmfY4wDDYXQoI9segvGaZZHItJXD8NcHKRyYmlSaPgQuvXITE9EUN/MwPyl3m9GdTT">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for subscribing!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
@@ -351,7 +350,8 @@
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/playervimeo/vimeo_player.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
+  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
+  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
   <script src="assets/mbr-popup-btns/mbr-popup-btns.js"></script>
   <script src="assets/formstyler/jquery.formstyler.js"></script>
   <script src="assets/formstyler/jquery.formstyler.min.js"></script>
