create github pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/white-logo-transparent-background-290x121.png" type="image/x-icon">
   <meta name="description" content="">
   
-  <title>Home</title>
+  <title>By Grace Charity</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -25,7 +25,44 @@
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  
+  <script language=JavaScript>
+<!--
+
+//Disable right mouse click Script
+//By Maximus (maximus@nsimail.com) w/ mods by DynamicDrive
+//For full source code, visit http://www.dynamicdrive.com
+
+var message="Function Disabled!";
+
+///////////////////////////////////
+function clickIE4(){
+if (event.button==2){
+alert(message);
+return false;
+}
+}
+
+function clickNS4(e){
+if (document.layers||document.getElementById&&!document.all){
+if (e.which==2||e.which==3){
+alert(message);
+return false;
+}
+}
+}
+
+if (document.layers){
+document.captureEvents(Event.MOUSEDOWN);
+document.onmousedown=clickNS4;
+}
+else if (document.all&&!document.getElementById){
+document.onmousedown=clickIE4;
+}
+
+document.oncontextmenu=new Function("alert(message);return false")
+
+// --> 
+</script>
 </head>
 <body>
   <section class="menu cid-rwCbkie77X" once="menu" id="menu2-1">
@@ -278,7 +315,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="0TStDbilhNUruiP4yhtUNuv8TJ/DJdWEuYdqrt4McL0Zt9J0QmjaRFFHa0De5VthbDv2Df9WLG9wOqt0LxSkGewOEjhivGvN7G6L/13eGLyqvM3y/wHjF+Qy68GrfKLV">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="lO30ybUeK9j/P2DYxsV53BctHwiQa56so0LFBLcj7e7ogvYHbWoVL1Tv6qEjSP/K9S+SlwhZOzrlpfhGmTTuwI3kCn3ji1F0mOkbwe6/nFELpujc/TDKyT4MgZ2z0iux">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for subscribing!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
@@ -361,9 +398,9 @@
   
   <script>
 (function() {
-var ph = document.getElementsByTagName('script')[0];
-var URI = window.location.href;
 var s = document.createElement('script');
+var URI = window.location.href;
+var ph = document.getElementsByTagName('script')[0];
 s.type = "text/javascript"; s.async = true;
 s.src = "https://s3-us-west-2.amazonaws.com/philantro/pdf/philantro.js";
 window.options = { OID: '954681500', Referrer: URI};
