--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ document.oncontextmenu=new Function("alert(message);return false")
             <div class="media-content align-right">
                 <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1">Our Story</h1>
                 <div class="mbr-section-text mbr-white pb-3">
-                    <p class="mbr-text mbr-fonts-style display-5">Watch this video to learn the story of how By Grace Charity got started and it's impact.</p>
+                    <p class="mbr-text mbr-fonts-style display-5">Watch this video to learn the story of how By Grace Charity got started.</p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="assets/files/4.%20By%20Grace%20Charity%20brochure.pdf" target="_blank">BROCHURE</a>
                         <a class="btn btn-md btn-white-outline display-4" href="#_givealways">DONATE</a></div>
@@ -315,7 +315,7 @@ document.oncontextmenu=new Function("alert(message);return false")
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="lO30ybUeK9j/P2DYxsV53BctHwiQa56so0LFBLcj7e7ogvYHbWoVL1Tv6qEjSP/K9S+SlwhZOzrlpfhGmTTuwI3kCn3ji1F0mOkbwe6/nFELpujc/TDKyT4MgZ2z0iux">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="d/My/Hd35lmXJqyUJxo5vGP6kZP7Bt9i7KXlxeoW2rAJTdb0A2NZRSzqsfowMF0TczM7wpKH3NmCXWo+yiyLJY5WrCiDr2YEEQQjcvw+K2Fc19kSN4zAbVqUZmmqEPWn">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for subscribing!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
