--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ document.oncontextmenu=new Function("alert(message);return false")
                 </li><li class="nav-item">
                     <a class="nav-link link text-warning display-4" href="index.html#features18-9">
                         Projects</a>
-                </li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-warning display-4" href="https://www.youtube.com/channel/UCZvfAaUnDy78YcnHGbAkuwA" target="_blank">Videos</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-7" href="#_givealways">
                     
                     DONATE</a> <a class="btn btn-sm btn-secondary display-7" href="tel:+13057819747">
@@ -304,7 +304,7 @@ document.oncontextmenu=new Function("alert(message);return false")
                 <p class="mb-4 foot-title mbr-fonts-style display-7">
                     RECENT NEWS
                 </p>
-                <p class="mbr-text mbr-fonts-style foot-text display-7">By Grace Chairity will be at the following events in the coming months, please stop by to visit us.<br><br>ASI North America, Orlando<br>ASI Inter-America, Bahamas</p>
+                <p class="mbr-text mbr-fonts-style foot-text display-7">By Grace Chairity will be at the following events, please stop by to visit us.<br><br>ASI North America, Orlando<br>ASI Inter-America, Bahamas</p>
             </div>
             <div class="col-md-4 offset-md-1 col-sm-12">
                 <p class="mb-4 foot-title mbr-fonts-style display-7">
@@ -315,7 +315,7 @@ document.oncontextmenu=new Function("alert(message);return false")
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="d/My/Hd35lmXJqyUJxo5vGP6kZP7Bt9i7KXlxeoW2rAJTdb0A2NZRSzqsfowMF0TczM7wpKH3NmCXWo+yiyLJY5WrCiDr2YEEQQjcvw+K2Fc19kSN4zAbVqUZmmqEPWn">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="U7KDNuAeYLVbxtJGkqwcK0l/SixlJCTj4aecb9gr9rL/vBqt57DSdWrsjFr6XbmzBLeYEAMkXfGZumI0GFllUPOxii035AXd+IA8wp6EwRKpYeojeKXfMwKkXWiLZ22x">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for subscribing!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
@@ -332,7 +332,7 @@ document.oncontextmenu=new Function("alert(message);return false")
 </div>
                 <p class="mb-4 mbr-fonts-style foot-title display-7">
                     CONNECT WITH US
-                </p>
+                <br><a href="mailto:info@bygracecharity.org" class="text-white">info@bygracecharity.org</a></p>
                 <div class="social-list pl-0 mb-0">
                         <div class="soc-item">
                             <a href="#" target="_blank">
@@ -345,7 +345,7 @@ document.oncontextmenu=new Function("alert(message);return false")
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a href="#" target="_blank">
+                            <a href="https://www.youtube.com/channel/UCZvfAaUnDy78YcnHGbAkuwA" target="_blank">
                                 <span class="mbr-iconfont mbr-iconfont-social socicon-youtube socicon"></span>
                             </a>
                         </div>
