--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ document.oncontextmenu=new Function("alert(message);return false")
                 </li><li class="nav-item">
                     <a class="nav-link link text-warning display-4" href="index.html#features18-9">
                         Projects</a>
-                </li><li class="nav-item"><a class="nav-link link text-warning display-4" href="https://www.youtube.com/channel/UCZvfAaUnDy78YcnHGbAkuwA" target="_blank">Videos</a></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-warning display-4" href="https://www.youtube.com/channel/UCZvfAaUnDy78YcnHGbAkuwA" target="_blank">Videos</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="shop.html#custom-html-i" target="_blank">Shop</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-7" href="#_givealways">
                     
                     DONATE</a> <a class="btn btn-sm btn-secondary display-7" href="tel:+13057819747">
@@ -315,7 +315,7 @@ document.oncontextmenu=new Function("alert(message);return false")
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="tZ+yRmIZny+5Z4h8CnvQgTzxgQB75/yDeUnLfiEhFIGsykjC8Yj1UXFk4C/Ad5FF3tcfLHZDuYwTJM6EfgVyfCo/1oMCrLCesb7KmbsjZ8tiBRfAqt0cxd/g7dEJvKFP">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="qhoAnFjZ4YrQHzKey8pLVrUl/OJdBO3BUSOnSHMsuTP4Cp2mYovojr5bbcZoEOSAmtGOs3Xbx+gLbZA1kAC3Fgfy6JsIqs1Z6/de4Fxd5plZ8jLhLc/xa/cFL9+i7CS6">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for subscribing!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
