--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ document.oncontextmenu=new Function("alert(message);return false")
                 </li><li class="nav-item">
                     <a class="nav-link link text-warning display-4" href="index.html#features18-9">
                         Projects</a>
-                </li><li class="nav-item"><a class="nav-link link text-warning display-4" href="https://www.youtube.com/channel/UCZvfAaUnDy78YcnHGbAkuwA" target="_blank">Videos</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="shop.html" target="_blank">Shop</a></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-warning display-4" href="https://www.youtube.com/channel/UCZvfAaUnDy78YcnHGbAkuwA" target="_blank">Videos</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="by-grace-charity-shop.html" target="_blank">Shop</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-7" href="#_givealways">
                     
                     DONATE</a> <a class="btn btn-sm btn-secondary display-7" href="tel:+13057819747">
@@ -315,7 +315,7 @@ document.oncontextmenu=new Function("alert(message);return false")
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="0dX2v24Y02YHUmJI4m1+5vyyzRsP/G+lp2Upb19+6MV/JZnKcICBpn7Jf4Qamjb6ejdNIKD2JHCMpd6habYCeJAhjIoRgnyMn2ieDhv4RLmGEzIfck5pehQnu15dwEVQ">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="n15FfjGRDAgw7x/Y14kNrySSZzjDxQydDLrw6omxOwkteEy6e+VqUne53FrqBNtpcLBlnz4aRHhR1c5qjf4YFV54eHAYaXm3IJdgiyM4C+VczHK8gOFtk01RF61u/SRA">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for subscribing!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
