create github pages

--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/white-logo-transparent-background-290x121.png" type="image/x-icon">
   <meta name="description" content="Support By Grace Charity by providing funding for families living in poverty. Your proceeds enable families to start a small business and create a livelihood. ">
   
-  <title>By Grace Charity - Store</title>
+  <title>By Grace Charity - Shop</title>
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -59,7 +59,7 @@ document.oncontextmenu=new Function("alert(message);return false")
 </script>
 </head>
 <body>
-  <div id="custom-html-i"><div id="myShop">
+  <div id="custom-html-l"><div id="myShop">
         <a href="https://shop.spreadshirt.com/by-grace-charity">Loading shop...</a>
 </div>
 
