create github pages

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ document.oncontextmenu=new Function("alert(message);return false")
             <div class="col-md-3 col-sm-4">
                 <div class="mb-3 img-logo">
                     <a href="#">
-                        <img src="assets/images/white-logo-transparent-background-290x121.png" alt="" title="">
+                        <img src="assets/images/white-logo-transparent-background-290x1210.png" alt="" title="">
                     </a>
                 </div>
                 <p class="mb-3 mbr-fonts-style foot-title display-7">
@@ -304,7 +304,7 @@ document.oncontextmenu=new Function("alert(message);return false")
                 <p class="mb-4 foot-title mbr-fonts-style display-7">
                     RECENT NEWS
                 </p>
-                <p class="mbr-text mbr-fonts-style foot-text display-7">By Grace Chairity will be at the following events, please stop by to visit us.<br><br>ASI North America, Orlando<br>ASI Inter-America, Bahamas</p>
+                <p class="mbr-text mbr-fonts-style foot-text display-7">By Grace Chairity will be at the following events, please stop by our booth to visit us.<br><br>ASI North America, Orlando<br>ASI Inter-America, Bahamas</p>
             </div>
             <div class="col-md-4 offset-md-1 col-sm-12">
                 <p class="mb-4 foot-title mbr-fonts-style display-7">
@@ -313,25 +313,11 @@ document.oncontextmenu=new Function("alert(message);return false")
                 <p class="mbr-text mbr-fonts-style form-text display-7">
                     Get monthly updates and free resources.
                 </p>
-                <div class="media-container-column" data-form-type="formoid">
-<!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter Subscription Form"><input type="hidden" name="email" data-form-email="true" value="MQQENmr4xChvREV0cs2UgGR+vmH/TCulsUR6hzCCYZqSWa5LaSRG+3aXBTaEGxu0vFoJpxjFemoh2Edwhs+f3Eiulwc3vXjmD/qXjyU2nRa14OvVBC6R0qRZ2XlIGukv">
-<div class="row">
-<div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for subscribing!</div>
-<div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
-</div>
-<div class="dragArea row">
-<div class="col-auto form-group " data-for="email">
-<input type="email" name="email" placeholder="Email" data-form-field="Email" required="required" class="form-control input-sm input-inverse my-2 display-7" value="" id="email-footer4-c">
-</div>
-<div class="col-auto input-group-btn m-2">
-<button type="submit" class="btn m-0 btn-secondary display-4">Subscribe</button>
-</div>
-</div>
-</form><!--Formbuilder Form-->
-</div>
+                <div class="media-container-column">
+                    <div class="mbr-section-btn"><a class="btn btn-sm btn-secondary display-3" href="#" target="_blank">SUBSCRIBE</a></div>
+            </div>
                 <p class="mb-4 mbr-fonts-style foot-title display-7">
-                    CONNECT WITH US
+                    <br>CONNECT WITH US
                 <br><a href="mailto:info@bygracecharity.org" class="text-white">info@bygracecharity.org</a></p>
                 <div class="social-list pl-0 mb-0">
                         <div class="soc-item">
