create github pages

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ document.oncontextmenu=new Function("alert(message);return false")
             <div class="col-md-3 col-sm-4">
                 <div class="mb-3 img-logo">
                     <a href="#">
-                        <img src="assets/images/white-logo-transparent-background-290x1211.png" alt="" title="">
+                        <img src="assets/images/white-logo-transparent-background-290x121.png" alt="" title="">
                     </a>
                 </div>
                 <p class="mb-3 mbr-fonts-style foot-title display-7">
@@ -314,7 +314,7 @@ document.oncontextmenu=new Function("alert(message);return false")
                     Get monthly updates and free resources.
                 </p>
                 <div class="media-container-column">
-                    <div class="mbr-section-btn"><a class="btn btn-sm btn-secondary display-3" href="#" target="_blank">SUBSCRIBE</a></div>
+                    <div class="mbr-section-btn"><a class="btn btn-sm btn-secondary display-3" href="Contact.html">SUBSCRIBE</a></div>
             </div>
                 <p class="mb-4 mbr-fonts-style foot-title display-7">
                     <br>CONNECT WITH US
