create github pages

--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@ document.oncontextmenu=new Function("alert(message);return false")
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="#">
+                    <a href="index.html">
                         <img src="assets/images/white-logo-transparent-background-290x121.png" alt="" title="" style="height: 8rem;">
                     </a>
                 </span>
