--- a/index.html
+++ b/index.html
@@ -131,34 +131,8 @@ document.oncontextmenu=new Function("alert(message);return false")
         <div class="modalWindow" style="display: none;">
             <div class="modalWindow-container">
                 <div class="modalWindow-video-container">
-                    <div id="player" class="modalWindow-video">
-            
-                        <script type="text/javascript">
-                            var player;
-                            // This code loads the IFrame Player API code asynchronously. This is the Youtube-recommended script loading method
-                            var tag = document.createElement("script");
-
-                            tag.src = "https://www.youtube.com/iframe_api";
-                            var firstScriptTag = document.getElementsByTagName("script")[0];
-                            firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-                            //  This function is called by YouTube once the the API is ready.It creates an &lt;iframe&gt; and sets up the video player inside.
-                            function onYouTubeIframeAPIReady() {
-                                player = new YT.Player("player", {
-                                    videoId: "xUSYnaHaf1k",
-                                    playerVars: { 'autoplay': 1, 'modestbranding': 1, 'rel': 0 },
-                                    events: {
-                                        // API event handlers
-                                        onReady: onPlayerReady
-                                    }
-                                });
-                            }
-
-                            // The API will call this function when the video player is ready (in this case, start playing the video).
-                            function onPlayerReady(event) {
-                                event.target.playVideo();
-                            }
-                        </script>
+                    <div class="modalWindow-video">
+                        <iframe width="100%" height="100%" frameborder="0" allowfullscreen="1" data-src="https://www.youtube.com/embed/xUSYnaHaf1k?enablejsapi=1"></iframe>
                     </div>
                     <a class="close" role="button" data-dismiss="modal">
                         <span aria-hidden="true" class="mbri-close mbr-iconfont closeModal"></span>
@@ -319,7 +293,7 @@ document.oncontextmenu=new Function("alert(message);return false")
             <div class="col-md-3 col-sm-4">
                 <div class="mb-3 img-logo">
                     <a href="#">
-                        <img src="assets/images/white-logo-transparent-background-290x12165.png" alt="" title="">
+                        <img src="assets/images/white-logo-transparent-background-290x12168.png" alt="" title="">
                     </a>
                 </div>
                 <p class="mb-3 mbr-fonts-style foot-title display-7">
