--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@ document.oncontextmenu=new Function("alert(message);return false")
             <div class="modalWindow-container">
                 <div class="modalWindow-video-container">
                     <div class="modalWindow-video">
+                        <script src="https://www.youtube.com/iframe_api"></script>
                         <iframe width="100%" height="100%" frameborder="0" allowfullscreen="1" data-src="https://www.youtube.com/embed/xUSYnaHaf1k?enablejsapi=1"></iframe>
                     </div>
                     <a class="close" role="button" data-dismiss="modal">
@@ -293,7 +294,7 @@ document.oncontextmenu=new Function("alert(message);return false")
             <div class="col-md-3 col-sm-4">
                 <div class="mb-3 img-logo">
                     <a href="#">
-                        <img src="assets/images/white-logo-transparent-background-290x12168.png" alt="" title="">
+                        <img src="assets/images/white-logo-transparent-background-290x12170.png" alt="" title="">
                     </a>
                 </div>
                 <p class="mb-3 mbr-fonts-style foot-title display-7">
