create github pages

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ document.oncontextmenu=new Function("alert(message);return false")
                         <h4 class="card-title mbr-fonts-style display-7">
                             Small Business Tailor Shops</h4>
                         <p class="mbr-text mbr-fonts-style align-left display-7">
-                            Women in the community receive supplies and instruction from By Grace Charity to start their own seamstress shops. This enables them to provide school uniforms and other clothing at a reduced cost to families with limited resources. These industrious women also seek out others in their community to create new businesses. <a href="#">More info...</a><br>
+                            Women in the community receive supplies and instruction from By Grace Charity to start their own seamstress shops. This enables them to provide school uniforms and other clothing at a reduced cost to families with limited resources. These industrious women also seek out others in their community to create new businesses. <a href="index.html#features18-9">More info...</a><br>
                         </p>
                     </div>
                 </div>
@@ -266,7 +266,7 @@ document.oncontextmenu=new Function("alert(message);return false")
                         <h4 class="card-title mbr-fonts-style display-7">
                             Small Business Poultry Farming</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                           Qualifying families receive poultry, feed and wire mesh enclosures. These families, live in close proximity and have daily or weekly contact allowing them to form a village Co-Op to market the eggs and purchase supplies in bulk. They agree in advance to donate surplus chicks or layers to another qualifying family in need. The new families agree to do the same. <a href="#">More info...</a><br>
+                           Qualifying families receive poultry, feed and wire mesh enclosures. These families, live in close proximity and have daily or weekly contact allowing them to form a village Co-Op to market the eggs and purchase supplies in bulk. They agree in advance to donate surplus chicks or layers to another qualifying family in need. The new families agree to do the same. <a href="index.html#features18-9">More info...</a><br>
                         </p>
                     </div>
                 </div>
@@ -283,7 +283,7 @@ document.oncontextmenu=new Function("alert(message);return false")
                         <h4 class="card-title mbr-fonts-style display-7">
                             Small Business Fish Farming</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Fish farming allows impoverished families to become self reliant in a very short period of time. Families are given basic supplies such as plastic liners, feed, and fish fry to raise tilapia on their own land. They market the fish to provide much needed resource for their families, and assist new families in starting their own fish farms. <a href="#">More info...</a><br>
+                            Fish farming allows impoverished families to become self reliant in a very short period of time. Families are given basic supplies such as plastic liners, feed, and fish fry to raise tilapia on their own land. They market the fish to provide much needed resource for their families, and assist new families in starting their own fish farms. <a href="index.html#features18-9">More info...</a><br>
                         </p>
                     </div>
                 </div>
@@ -329,7 +329,7 @@ document.oncontextmenu=new Function("alert(message);return false")
             <div class="col-md-3 col-sm-4">
                 <div class="mb-3 img-logo">
                     <a href="#">
-                        <img src="assets/images/white-logo-transparent-background-290x1212.png" alt="" title="">
+                        <img src="assets/images/white-logo-transparent-background-290x1213.png" alt="" title="">
                     </a>
                 </div>
                 <p class="mb-3 mbr-fonts-style foot-title display-7">
