--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ document.oncontextmenu=new Function("alert(message);return false")
                     <a href="https://fb.me/bygracecharity" target="_blank">
                         <span class="px-2 mbr-iconfont mbr-iconfont-social socicon-facebook socicon" style="font-size: 50px;"></span>
                     </a>
-                    <a href="https://tinyurl.com/BGCYouTube" target="_blank">
+                    <a href="https://www.youtube.com/channel/UCZvfAaUnDy78YcnHGbAkuwA?sub_confirmation=1" target="_blank">
                         <span class="px-2 mbr-iconfont mbr-iconfont-social socicon-youtube socicon" style="font-size: 50px;"></span>
                     </a>
                     <a href="https://www.youtube.com/c/mobirise" target="_blank">
@@ -329,7 +329,7 @@ document.oncontextmenu=new Function("alert(message);return false")
             <div class="col-md-3 col-sm-4">
                 <div class="mb-3 img-logo">
                     <a href="#">
-                        <img src="assets/images/white-logo-transparent-background-290x1210.png" alt="" title="">
+                        <img src="assets/images/white-logo-transparent-background-290x1211.png" alt="" title="">
                     </a>
                 </div>
                 <p class="mb-3 mbr-fonts-style foot-title display-7">
@@ -367,7 +367,7 @@ document.oncontextmenu=new Function("alert(message);return false")
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a href="https://tinyurl.com/BGCYouTube" target="_blank">
+                            <a href="https://www.youtube.com/channel/UCZvfAaUnDy78YcnHGbAkuwA?sub_confirmation=1" target="_blank">
                                 <span class="mbr-iconfont mbr-iconfont-social socicon-youtube socicon"></span>
                             </a>
                         </div>
