create github pages

--- a/index.html
+++ b/index.html
@@ -326,10 +326,10 @@ document.oncontextmenu=new Function("alert(message);return false")
 
     <div class="container">
         <div class="media-container-row content mbr-white">
-            <div class="col-md-3 col-sm-4">
+            <div class="col-md-4 col-sm-4">
                 <div class="mb-3 img-logo">
                     <a href="#">
-                        <img src="assets/images/white-logo-transparent-background-290x1212.png" alt="" title="">
+                        <img src="assets/images/white-logo-transparent-background-290x1210.png" alt="" title="">
                     </a>
                 </div>
                 <p class="mb-3 mbr-fonts-style foot-title display-7">
@@ -340,9 +340,27 @@ document.oncontextmenu=new Function("alert(message);return false")
                 <p class="mb-4 foot-title mbr-fonts-style display-7">
                     RECENT NEWS
                 </p>
-                <p class="mbr-text mbr-fonts-style foot-text display-7">By Grace Chairity will be at the following events, please stop by our booth to visit us.<br><br>ASI North America, Orlando<br>ASI Inter-America, Bahamas</p>
+                <p class="mbr-text mbr-fonts-style foot-text display-7">By Grace Chairity will be at ASI North-America and Inter-America conventions. Please stop by our booth to visit us.<br></p>
+
+                <table align="center">
+                    <tbody>
+                        <tr>
+                            <td>
+                                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                                <input type="hidden" name="cmd" value="_s-xclick">
+                                <input type="hidden" name="hosted_button_id" value="GXTV8AMJYUNZ2">
+                                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button">
+                                <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                                </form>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <p class="mbr-text mbr-fonts-style foot-text display-7">Got PayPal? We've partnered to receive donations this way also. Use the yellow donate button above. Thank you for your support.</p>
+                
             </div>
-            <div class="col-md-4 offset-md-1 col-sm-12">
+            <div class="col-md-3 offset-md-1 col-sm-12">
                 <p class="mb-4 foot-title mbr-fonts-style display-7">
                     SUBSCRIBE
                 </p>
